2009-04-25  Roland Huss  <roland@consol.de>

	* Initial development release 0.01_01
