@@ -17,6 +17,8 @@ Build.PL
 ChangeLog
 lib/JMX/Jmx4Perl.pm
 lib/JMX/Jmx4Perl/Agent.pm
+lib/JMX/Jmx4Perl/Request.pm
+lib/JMX/Jmx4Perl/Response.pm
 lib/jmx4perl.pod
 LICENSE
 MANIFEST			This list of files
