@@ -1,6 +1,6 @@
 ---
 name: jmx4perl
-version: 0.01_01
+version: 0.01_02
 author:
   - Roland Huss (roland@cpan.org)
 abstract: Easy JMX access to Java Applications
@@ -13,21 +13,26 @@ requires:
   Getopt::Long: 0
   JSON: 2.12
   LWP::UserAgent: 0
+  Object::Tiny: 1.06
   Pod::Usage: 0
 build_requires:
   Module::Build: 0
   Test: 0
   Test::More: 0
 recommends:
-  Nagios::Plugin: 0.32
+  Nagios::Plugin: 0.27
 provides:
   JMX::Jmx4Perl:
     file: lib/JMX/Jmx4Perl.pm
-    version: 0.01_01
+    version: 0.01_02
   JMX::Jmx4Perl::Agent:
     file: lib/JMX/Jmx4Perl/Agent.pm
   JMX::Jmx4Perl::Agent::UserAgent:
     file: lib/JMX/Jmx4Perl/Agent.pm
+  JMX::Jmx4Perl::Request:
+    file: lib/JMX/Jmx4Perl/Request.pm
+  JMX::Jmx4Perl::Response:
+    file: lib/JMX/Jmx4Perl/Response.pm
 generated_by: Module::Build version 0.31012
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
