@@ -13,24 +13,30 @@ check_jmx4perl - Nagios check using jmx4perl for accessing JMX information
 use FindBin qw ($Bin);
 use lib qq($Bin/../lib);
 use JMX::Jmx4Perl;
+use JMX::Jmx4Perl::Request;
+use JMX::Jmx4Perl::Response;
 use strict;
 use Data::Dumper;
 use Nagios::Plugin;
 use Time::HiRes qw(gettimeofday);
 
+*Nagios::Plugin::Functions::get_shortname = sub {
+    return undef;
+};
+
 my $np = Nagios::Plugin->
   new(
       usage => 
-      "Usage: %s -u <agent-url> -m <mbean> -a <attribute> -c <threshold critical> -w <threshold warning>\n" . 
+      "Usage: %s -u <agent-url> -m <mbean> -a <attribute> -c <threshold critical> -w <threshold warning> -n <label>\n" . 
       "                      [--user <user>] [--password <password>] [-v] [--help]\n",
       version => "0.01",
       url => "http://www.consol.com/opensource/nagios/",
-      shortname => "jmx4perl",
       plugin => "check_jmx4perl",
       blurb => "This plugin checks for JMX attribute values on a remote Java application server",
       extra => "\n\nYou need to deploy j4p-agent.war on the target application server.\n" .
       "Please refer to the documentation of JMX::Jmx4Perl for further details"
      );
+$np->shortname(undef);
 $np->add_arg(
          spec => "url|u=s",
          help => "URL to agent web application (e.g. http://server:8080/j4p-agent/)",
@@ -72,6 +78,11 @@ $np->add_arg(
          spec => "verbose|v",
          help => "Print verbose output "
         );
+$np->add_arg(
+             spec => "name|n=s",
+             help => "Name to use for output. Optional, by default a standard value based on the MBean ".
+             "and attribute will be used"
+            );
 $np->getopts();
 
 $np->nagios_die("At least a critical or warning threshold must be given") 
@@ -86,14 +97,22 @@ my $o = $np->opts;
 eval {
     my $start_time = (gettimeofday)[1];
     my $jmx = JMX::Jmx4Perl->new(mode => "agent", url => $o->url, user => $o->user, password => $o->password);
-    my $resp = $jmx->get_attribute($o->mbean,$o->attribute,$o->path);
+    my $jmx_request = 
+      JMX::Jmx4Perl::Request->new(READ_ATTRIBUTE,$o->mbean,$o->attribute,$o->path);
+    if ($o->verbose) {
+        print "Request URL: ",$jmx->request_url($jmx_request),"\n";
+        if ($o->user) {
+            print "Remote User: ",$o->user,"\n";
+        }
+    }
+    my $resp = $jmx->request($jmx_request);
     my $duration = int ((gettimeofday)[1] - $start_time) / 1000;
 
     $np->add_perfdata(label => "duration", value => $duration, uom => "ms");
     if (!defined($resp->{value})) {
         $np->nagios_die("JMX Request " . &format($o) . " failed" . Dumper($resp));
     }
-    if ($np->opts->verbose) {
+    if ($o->verbose) {
         print "Result fetched in ",$duration,"ms:\n";
         print Dumper($resp);
     }
@@ -114,6 +133,10 @@ if ($@) {
 
 sub format { 
     my $o = shift;
-    return "[".$o->mbean.",".$o->attribute.($o->path ? "," . $o->path : "")."]";
+    if ($o->name) {
+        return $o->name;
+    } else {
+        return "[".$o->mbean.",".$o->attribute.($o->path ? "," . $o->path : "")."]";
+    }
 }
 
